# pos-printer-module

./: CMakeLists.txt  README.md  example.oxps  sample.xml  sample58.xml  sample58img copy.xml  sample58img.xml
includes/: main.h  print_document.h
includes/blocks/: block.h  page.h
src/: help.cpp  main.cpp  print_document.cpp  printer_list.cpp
src/block/: block.cpp  column.cpp  image.cpp  page.cpp  row.cpp  text.cpp
